# neuralwindow

./: .gitignore  CMakeLists.txt  Doxyfile  FindGraphViz.cmake  LICENSE  README.md  suppressions.supp
.github/workflows/: cmake.yml
cmake/: FindGraphViz.cmake
cmake_add/: FindMathGL2.cmake
example/: CMakeLists.txt  README.md  deep_convolutional_gan.c  deep_feed_forward_nn.c  graph_example.cc  mnist.c  mnist.cc  mnist_data.c  mnist_data.h  plots.c  plots.h  simpsons_data.c  simpsons_data.h  transformer.c
src/: CMakeLists.txt  buffer.c  cpu_device.c  cpu_operation.c  cuda_device.cu  cuda_operation.cu  datatype.c  device.c  errors.c  graph.c  graph.h  measure.c  operation.c  shape.c  tensor.c
src/include/: buffer.h  cpu_device.h  cpu_operation.h  cuda_device.h  cuda_operation.h  datatype.h  device.h  errors.h  measure.h  operation.h  shape.h  stdfloat.h  tensor.h
src/nn/: activation.c  activation.h  cost.c  cost.h  init.c  init.h  layer.c  layer.h  metric.c  metric.h  optimizer.c  optimizer.h  train.c  train.h
src/runtime/: c_runtime.c  c_runtime.h  cu_runtime.cu  cu_runtime.h  mkl_runtime.c  mkl_runtime.h  nw_runtime.c  nw_runtime.h  openblas_runtime.c  openblas_runtime.h  runtime.c  runtime.h
src/tensor/: binary_operation.c  binary_operation.h  buffer.c  buffer.h  function.c  function.h  operation.c  operation.h  reduction_operation.c  reduction_operation.h  structure_operation.c  structure_operation.h  tensor.c  tensor.h  unary_operation.c  unary_operation.h  view.c  view.h
src/util/: data.h  datatype.c  datatype.h  deque.c  deque.h  element.c  element.h  errors.c  errors.h  graph.c  graph.h  id_pool.c  id_pool.h  map.c  map.h  measure.c  measure.h  metric.c  metric.h  queue.c  queue.h  random.c  random.h  sort.c  sort.h  stack.c  stack.h
test/: CMakeLists.txt  graph.c  test_autograd.cc  test_buffer.c  test_buffer.cc  test_buffer_binary.cc  test_buffer_binary_performance.cc  test_buffer_performance.cc  test_buffer_reduction.cc  test_buffer_reduction_performance.cc  test_buffer_unary.cc  test_buffer_unary_performance.cc  test_c_runtime.c  test_cu_runtime.c  test_device.c  test_function.c  test_graph.c  test_graph.cc  test_helper.c  test_helper.cc  test_helper.h  test_helper_torch.cc  test_helper_torch.h  test_map.c  test_mkl_runtime.c  test_model_exporter.cc  test_openblas_runtime.c  test_optimizer.cc  test_optimizers.cc  test_queue.c  test_rnn.cc  test_tensor.c  test_tensor.cc  test_tensor_binary.cc  test_tensor_binary_elementwise.cc  test_tensor_binary_performance.cc  test_tensor_reduction.cc  test_tensor_reduction_performance.cc  test_tensor_structure.cc  test_tensor_ternary.cc  (+3 more)
tests/: CMakeLists.txt  test_tensor.c
