set(EXAMPLES mnist)

find_package(MathGL2 QUIET)
if(MathGL2_FOUND)
    set(MathGL2_LIBRARIES "${MathGL2_LIBRARIES_DIRS}/libmgl.so")

    set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} --nvlink-options=--disable-warnings")
    foreach(EXAMPLE ${EXAMPLES})
        add_executable(${EXAMPLE} "${EXAMPLE}.c")
        target_include_directories(${EXAMPLE} PUBLIC "." ${MATHGL2_INCLUDE_DIRS})
        target_link_libraries(${EXAMPLE} ${PROJECT_NAME} m ${MathGL2_LIBRARIES})
    endforeach()
else()
    message("Could not find MathGL2. Omitting examples...")
endif()
